# EDA_ENEM2023

./: .gitignore  EDA_Enem2023.ipynb  README.md  pyproject.toml
data/: Dicionário_Microdados_Enem_2023.xlsx
